--- a/index.html
+++ b/index.html
@@ -1,17 +1,92 @@
-<!DOCTYPE html> ##Every html page must start with this.
+<!DOCTYPE html> <! -- Every html page must start with this -->
 <html lang="en">
 <head>
     <title>My HTML Scrapbook</title>
 </head>
 <body>
-    <h1>h1</h1>
-    <h2>h2</h2>
-    <h3>h3</h3>
-    <h4>h4</h4>
-    <h5>h5</h5>
-    <h6>h6</h6>
-    <p>This is a paragraph with some <code>code</code> inserted.</p>
-    <br>
-    <p>Make breaks using <code>br</code></p>
+    <header>Header goes here
+        <time>15th June 2020</time>
+        <nav>navigation bar
+            <ul>
+                <li><a href="#various-lists">Lists</a></li>
+                <li><a href="https://codepen.io/samtovey13/full/yLYWKJx">Forms</a></li>
+                <li><a href="tables.html">Tables</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>h1: this is the MAIN section</h1>
+        <h2>h2: can only be one MAIN element per page</h2>
+        <h3>h3</h3>
+        <h4>h4</h4>
+        <h5>h5</h5>
+        <h6>h6</h6>
+        <p>This is a paragraph with some <code>code</code> inserted.</p>
+        <br>
+        <p>Make breaks using <code>br</code>.</p>
+        <br>
+
+        <div id="DOM-tree-figure">
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/DOM-model.svg/1200px-DOM-model.svg.png"
+                alt="Diagram showing the DOM tree"
+                width=100%>
+                <figcaption>This is a figcaption describing the contents of the parent figure.</figcaption>
+            </figure>
+        </div>
+
+        <span id="various-lists">
+            <a name="various-lists">
+            <h3>Lists</h3></a>
+            <p>Here we've used the span tag to group the three lists together, 
+                which will help later with formatting.</p>
+            <div class="unordered-list">
+                <p>This is an <strong>unordered</strong> list:</p>
+                <ul>
+                    <li>first list item</li>
+                    <li>second list item</li>
+                    <li>third list item, etc...</li>
+                </ul>
+            </div>
+
+            <div class="ordered-list">
+                <p>This is an <strong>ordered</strong> list:</p>
+                <ol>
+                    <li>first list item</li>
+                    <li>second list item</li>
+                    <li>third list item, etc...</li>
+                </ol>
+            </div>
+
+            <div class="definition list">
+                <p>This is a <strong>definition</strong> list:</p>
+                <dd>first definition;</dd>
+                <dd><s>Second definition</s>.</dd>
+            </div>
+        </span>
+
+        <article>
+            <h3>Breaking news!</h3>
+            <p>Here is a stand-alone article which is self-contained and can be reused.</p>
+            <blockquote>If you have a long quote you can give it blockquote tags. The margins will indent.
+                <cite>Cite the referenced text here</cite></blockquote>
+        </article>
+
+        <aside>There is also a tag for an aside, which may contain content <q>not directly related</q> 
+            to the main content, for example this video.
+            <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/gT0Lh1eYk78" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        </aside>
+
+
+
+     </main>
+
+    <footer>Footer here with <small>TERMS AND CONDITIONS</small></footer>
 </body>
 </html>
