updated tables, added form anchors

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <nav>navigation bar
             <ul>
                 <li><a href="#various-lists">Lists</a></li>
-                <li><a href="https://codepen.io/samtovey13/full/yLYWKJx">Forms</a></li>
+                <li><a href="#forms">Forms</a></li>
                 <li><a href="tables.html">Tables</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Handy list of html elements (external link)</a></li>
             </ul>
         </nav>
     </header>
@@ -65,6 +66,20 @@
                 <dd><s>Second definition</s>.</dd>
             </div>
         </span>
+
+        <div>
+            <h3><a name="forms">Forms</a></h3>
+            <p>Here's one I made earlier...<br>
+                <a href="https://codepen.io/samtovey13/full/yLYWKJx">
+                    https://codepen.io/samtovey13/full/yLYWKJx</a>
+            </p>
+            <p>To find out more about forms here is an 
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Your_first_form">
+                    external link</a>.</p>
+            <p>And click here for info on
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button">
+                    button elements</a>.</p>
+        </div>
 
         <article>
             <h3>Breaking news!</h3>
