--- a/tables.html
+++ b/tables.html
@@ -62,6 +62,9 @@
         </table>
 
         <br>
+        <p>For more info on tables go to <a href="https://html.com/tables/">html.com/tables</a>.</p>
+
+        <br>
 
         
     </main>
