added semantics and accessibility section

--- a/index.html
+++ b/index.html
@@ -82,20 +82,37 @@
         </div>
 
         <article>
-            <h3>Breaking news!</h3>
-            <p>Here is a stand-alone article which is self-contained and can be reused.</p>
-            <blockquote>If you have a long quote you can give it blockquote tags. The margins will indent.
-                <cite>Cite the referenced text here</cite></blockquote>
+            <h3>Semantic tags</h3>
+            <p>HTML5 is based around semantic tags rather than just calling everything 'div'. 
+                According to the Manchester codes site: 
+                </p>
+            <blockquote>Semantic HTML tags do little (and often nothing) to modify their contents appearance. 
+                However, they make our code easier to read for other developers, search engines and screen readers.
+                <cite>Manchester Codes</cite>
+            </blockquote>
+            <figure>
+                <img  alt="diagram of best practice semantics" 
+                src="https://s3.amazonaws.com/viking_education/web_development/web_app_eng/html5_sectioning_high_level.jpg" width=100%>
+                <figcaption>This diagram shows best practice on the right hand side.</figcaption>
+            </figure>
+
+
         </article>
 
-        <aside>There is also a tag for an aside, which may contain content <q>not directly related</q> 
-            to the main content, for example this video.
+        <aside>
+            <p>An article contains something that could stand alone or be reused, 
+                whereas an aside contains content not directly related to the main content, e.g. advertising.</p>
             <iframe width="560" height="315" 
                 src="https://www.youtube.com/embed/gT0Lh1eYk78" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
             </iframe>
+            <ul>Some helpful links about semantics:
+                <li><a href="https://css-tricks.com/why-how-and-when-to-use-semantic-html-and-aria/">HTML and ARIA</a></li>
+                <li><a href="https://css-tricks.com/video-screencasts/100-lets-write-semantic-markup/">An hour lecture on semantic markup</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics">Semantics in HTML, CSS and JavaScript</a></li>
+            </ul>    
         </aside>
 
 
